[gd_scene load_steps=4 format=3 uid="uid://mgpdom0bxt1y"]

[ext_resource type="Script" uid="uid://dtjds5xuru1x6" path="res://scripts/ui/player_inventory.gd" id="1_84elj"]
[ext_resource type="PackedScene" uid="uid://c2w13g6qp7nis" path="res://scenes/ui/equipment_slot.tscn" id="1_pylm2"]
[ext_resource type="PackedScene" uid="uid://i8r3dhcqw1wa" path="res://scenes/ui/inventory_panel.tscn" id="2_ielsr"]

[node name="PlayerInventory" type="PanelContainer"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -84.0
offset_bottom = 132.0
grow_horizontal = 0
script = ExtResource("1_84elj")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2

[node name="WeaponSlot" parent="HBoxContainer/VBoxContainer" instance=ExtResource("1_pylm2")]
unique_name_in_owner = true
layout_mode = 2
slot_type = 1

[node name="ArmorSlot" parent="HBoxContainer/VBoxContainer" instance=ExtResource("1_pylm2")]
unique_name_in_owner = true
layout_mode = 2
slot_type = 2

[node name="HelmSlot" parent="HBoxContainer/VBoxContainer" instance=ExtResource("1_pylm2")]
unique_name_in_owner = true
layout_mode = 2
slot_type = 3

[node name="BootsSlot" parent="HBoxContainer/VBoxContainer" instance=ExtResource("1_pylm2")]
unique_name_in_owner = true
layout_mode = 2
slot_type = 4

[node name="PanelContainer" type="PanelContainer" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer/VBoxContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="GoldLabel" type="Label" parent="HBoxContainer/VBoxContainer/PanelContainer/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Gold: 0"

[node name="InventoryPanel" parent="HBoxContainer" instance=ExtResource("2_ielsr")]
unique_name_in_owner = true
layout_mode = 2
